# seek-automation

./: .env  .env.example  README.md  apply.py  main.py  pyproject.toml  utils.py
agents/: agent.py
application_materials/: example_resume.txt
application_pipeline/: job_application_pipeline.py
common/: utils.py
config/: args.py  run_config.json
email_sender/: email_sender.py
integrations/: agent.py
scrapers/: scraper.py
utils/: utils.py
