[project]
name = "seek-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "reportlab",
    "apify_client",
    "meta_ai_api",
    "pypdf2>=3.0.1",
    "openai>=1.109.1",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
]
